my-app/src/style/pages/_countryInfo.scss
@use "../abstracts" as *;

.country-info-container {
  margin-block: 100px;
  @include mq("xl") {
    margin-block: 20px 40px;
  }
  #back-btn {
    margin-bottom: 50px;
    color: var(--text);
    font-size: 16px;
    display: flex;
    justify-content: start;
    gap: 5px;
    align-items: center;
    width: 100px;
    height: 30px;
    box-shadow: 0 1px 3px 0px var(--shadow);
    background-color: var(--elements);
    border: none;
    cursor: pointer;
    transition: box-shadow $delay;
    position: relative;
    overflow: hidden;
    &:hover {
      box-shadow: 0 1px 10px 3px var(--shadow);
      span.out {
        top: 200%;
      }
      span.in {
        top: 6px;
      }
    }
    span.arrow {
      margin-bottom: 5px;
      margin-left: 5px;
      font-size: 25px;
      line-height: 0.5;
      font-weight: bold;
    }
    span.in,
    span.out {
      position: absolute;
      width: 100%;
      height: 100%;
      background-color: transparent;
      z-index: 10;
      transition: top $delay;
    }
    span.out {
      left: 8px;
      top: 6px;
    }
    span.in {
      left: 13px;
      top: -100%;
    }
  }
  .country-info {
    font-size: 1rem;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 500px));
    row-gap: 50px;
    column-gap: 100px;
    justify-content: center;
    align-items: center;
    @include mq("sm") {
      font-size: 0.9rem;
    }
    .image {
      position: relative;
      width: 100%;
      img {
        width: 100%;
        object-fit: cover;
        box-shadow: 0 1px 3px 1px var(--shadow);
      }
      a {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: 10;
      }
    }
    .info {
      flex: 1;
      .lists {
        margin-block: 20px 40px;
        display: flex;
        justify-content: space-between;
        @include mq("sm") {
          flex-direction: column;
          gap: 20px;
        }
        li {
          margin-bottom: 8px;
          span:first-child {
            font-weight: bold;
            display: inline-block;
            margin-right: 10px;
          }
        }
      }
      .borders {
        display: flex;
        & > span {
          width: 160px;
        }
        ul {
          display: flex;
          gap: 5px;
          flex-wrap: wrap;
          li {
            font-size: 14px;
            width: 65px;
            height: 20px;
            display: flex;
            justify-content: center;
            align-items: center;
            box-shadow: 0 1px 3px 0px var(--shadow);
            position: relative;
            background-color: var(--elements);
            user-select: none;
            position: relative;
            cursor: pointer;
            overflow: hidden;
            transition: box-shadow $delay;
            &.none {
              cursor: default;
            }
            &:hover {
              box-shadow: 0 1px 6px 1px var(--shadow);
              a {
                top: 0;
              }
              span {
                top: 200%;
              }
            }
            a,
            span {
              position: absolute;
              left: 0;
              width: 100%;
              height: 100%;
              z-index: 10;
              transition: top $delay;
              text-align: center;
            }
            a {
              top: -100%;
              background-color: var(--elements);
            }
            span {
              top: 0;
            }
          }
        }
      }
    }
  }
}

